add some new panels
+ new 1.54
+ new 1.54b
+ 4.37b
+ 10.2b
+ ED060KD1

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,6 @@ board_build.arduino.partitions = app3M_fat9M_16MB.csv
 board_build.arduino.memory_type = qio_opi
 build_flags = -DBOARD_HAS_PSRAM
 board_upload.flash_size = 16MB
-lib_deps = bblanchon/ArduinoJson@^7.3.1
+lib_deps = 
+	bblanchon/ArduinoJson@^7.3.1
+	bitbank2/FastEPD@^1.2.0
